--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <nav class="nav-bar">
+
+      <a href="/celebrities/create">Create Celebritie</a>
+      <a href="/celebrities">Celebrities List</a>
+
+    </nav>
+
     <div class="container">
       {{{body}}}
     </div>
