--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<a href="/celebrities">Lista de Celebrities</a> <br>
+<a href="/create">Crear Celebritie</a>
