--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,4 +2,6 @@
 <p>Welcome to {{title}}</p>
 
 <a href="/celebrities">Lista de Celebrities</a> <br>
-<a href="/create">Crear Celebritie</a>
+<a href="/create">Crear Celebritie</a> <br>
+<a href="/movies/create-movie">Create Movie </a> <br>
+<a href="/movies">Movies List </a>
