--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,8 +13,11 @@
   <body>
     <nav class="nav-bar">
 
-      <a href="/celebrities/create">Create Celebritie</a>
-      <a href="/celebrities">Celebrities List</a>
+      <a href="/">Inicio</a>
+      <a href="/celebrities/create">Create Celebritie </a>
+      <a href="/celebrities">Celebrities List </a>
+      <a href="/movies/create-movie">Create Movie </a>
+      <a href="/movies">Movies List </a>
 
     </nav>
 
